_sass/_base.scss
/* ... */
.navbar.navbar-light {
  a {
    &:hover {
      text-decoration: none;
    }
  }
  .navbar-brand {
    color: var(--global-text-color);
  }
  .navbar-nav .nav-item .nav-link {
    color: var(--global-text-color);
    &:hover {
      color: var(--global-hover-color);
    }
  }
  .navbar-nav .nav-item.active>.nav-link {
      background-color: inherit;
      font-weight: bolder;
      color: var(--global-theme-color);
      &:hover {
        color: var(--global-hover-color);
      }
  }
  .navbar-brand.social {
    padding-bottom: 0;
    padding-top: 0;
    font-size: 1.7rem;
    a {
      i::before {
        color: var(--global-text-color);
        transition-property: all 0.2s ease-in-out;
      }
      &:hover {
        i::before {
          color: var(--global-theme-color);
        }
      }
    }
  }
}

.navbar-toggler {
  .icon-bar {
    display: block;
    width: 22px;
    height: 2px;
    background-color: var(--global-text-color);
    border-radius: 1px;
    margin-bottom: 4px;
    transition: all 0.2s;
  }
  .top-bar {
    transform: rotate(45deg);
    transform-origin: 10% 10%;
  }
  .middle-bar {
    opacity: 0;
  }
  .bottom-bar {
    transform: rotate(-45deg);
    transform-origin: 10% 90%;
  }
}

.navbar-toggler.collapsed {
  .top-bar {
    transform: rotate(0);
  }
  .middle-bar {
    opacity: 1;
  }
  .bottom-bar {
    transform: rotate(0);
  }
}

// Social (bottom)

.social {
  text-align: center;
  .contact-icons {
    font-size: 4rem;
    a {
      i::before,
      .x-icon {
        color: var(--global-text-color);
        transition: color 0.2s ease-in-out;
      }

      .x-icon {
        width: 0.875em;
        height: 0.875em;
        fill: currentColor;
        vertical-align: -0.025em;
      }

      &:hover {
        i::before,
        .x-icon {
          color: var(--global-theme-color);
        }
      }
    }
  }
  .contact-note {
    font-size: 0.8rem;
  }
}


// Shared inline link lists

.inline-links {
  display: flex;
  flex-wrap: wrap;
  align-items: center;

  > a,
  > button {
    display: inline-flex;
    align-items: center;
    min-height: 1.75rem;
    appearance: none;
    border: 0;
    border-radius: 0;
    background: transparent;
    color: var(--global-theme-color);
    cursor: pointer;
    font-family: inherit;
    font-size: 0.85rem;
    font-weight: 400;
    line-height: 1.2;
    padding: 0;
    text-decoration: none;

    &:hover {
      color: var(--global-hover-color);
      text-decoration: underline;
    }

    &:focus-visible {
      outline: 2px solid var(--global-theme-color);
      outline-offset: 3px;
    }
  }

  > * + * {
    position: relative;
    margin-left: 0.6rem;
    padding-left: 0.6rem;

    // Short, vertically-centered separator instead of a full-height border.
    &::before {
      content: "";
      position: absolute;
      left: 0;
      top: 50%;
      transform: translateY(-50%);
      width: 1px;
      height: 0.7em;
      background: var(--global-divider-color);
    }
  }
}

.profile-links {
  justify-content: center;
  margin: 1rem 0;
}


// Footer
footer.fixed-bottom {
  background-color: var(--global-footer-bg-color);
  font-size: 0.75rem;
  .container {
    color: var(--global-footer-text-color);
    padding-top: 9px;
    padding-bottom: 8px;
  }
  a {
    color: var(--global-footer-link-color);
    &:hover {
      color: var(--global-theme-color);
      text-decoration: none;
    }
  }
}

footer.sticky-bottom {
  border-top: 1px solid var(--global-divider-color);
  padding-top: 40px;
  padding-bottom: 40px;
  font-size: 0.9rem;
}


// Blog

.header-bar {
  border-bottom: 1px solid var(--global-divider-color);
  text-align: center;
  padding-top: 2rem;
  padding-bottom: 5rem;
  h1 {
    color: var(--global-theme-color);
    font-size: 5rem;
  }
}

.post-list {
  margin: 0;
  margin-bottom: 40px;
  padding: 0;
  li {
    border-bottom: 1px solid var(--global-divider-color);
    list-style: none;
    padding-top: 2rem;
    padding-bottom: 2rem;
    .post-meta {
      color: var(--global-text-color-light);
      font-size: 0.875rem;
      margin-bottom: 0;
    }
    .post-tags {
      color: var(--global-text-color-light);
      font-size: 0.875rem;
      padding-top: 0.25rem;
      padding-bottom: 0;
    }
    a {
      color: var(--global-text-color);
      text-decoration: none;
      &:hover {
        color: var(--global-theme-color);
      }
    }
  }
}

.pagination {
  .page-item {
    .page-link {
      color: var(--global-text-color);
      &:hover {
        color: $black-color;
      }
    }
    &.active .page-link {
      color: $white-color;
      background-color: var(--global-theme-color);
      &:hover {
        background-color: var(--global-theme-color);
      }
    }
  }
}


// Distill

.distill {
  a:hover {
    border-bottom-color: var(--global-theme-color);
    text-decoration: none;
  }
}


// Projects

.projects {
  a {
    text-decoration: none;

    &:hover {
      .card-title {
        color: var(--global-theme-color);
      }
    }
  }

  .card {
    img {
      width: 100%;
    }
  }

  .card-item {
    width: auto;
    margin-bottom: 10px;

    .row {
      display: flex;
      align-items: center;
    }
  }

  .grid-sizer, .grid-item {
    width: 250px;
    margin-bottom: 10px;
  }

  h2.category {
    color: var(--global-divider-color);
    border-bottom: 1px solid var(--global-divider-color);
    padding-top: 0.5rem;
    margin-top: 2rem;
    margin-bottom: 1rem;
    text-align: right;
  }
}
/* ... */

